<resources>
    <string name="app_name">Courseji For Teacher</string>

    <string name="text_login_web_title">Log in educational system</string>
    <string name="hint_student_id">Student ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_check_code">Verification code</string>
    <string name="toast_check_code_get_error">Failed to get verification code</string>
    <string name="text_login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="error_course_data">find the course data error</string>
    <string name="error_course_node">The number of sections with a course is greater than the maximum number of sections in the timetable</string>
    <string name="schedule_setting">ScheduleSettings</string>
    <string name="fragment_schedule">schedule</string>
    <string name="fragment_attendance">attendance</string>
    <string name="fragment_my">my</string>
    <string name="fragment_middle">check</string>
    <string name="fragment_leave">leave</string>
</resources>